--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
       }
 
       try {
-        const response = await fetch('http://localhost:5000/register', {
+        const response = await fetch('https://crypto-simulation-for-fun-4ocm.vercel.app/register', {
           method: 'POST',
           headers: {'Content-Type': 'application/json'},
           body: JSON.stringify({ username, password }),
