--- a/dashboard.html
+++ b/dashboard.html
@@ -218,7 +218,6 @@
     <section id="chart-section" aria-label="Candlestick Chart">
       <h2 id="chart-title" style="text-align:center; user-select:none; color:#00ffe4; text-shadow:0 0 8px #00ffe4;">Candlestick Chart - Select a coin</h2>
       <div class="chart-container">
-        <!-- Replace with actual chart or image if needed -->
         <img src="images.png" alt="Candlestick Chart Bitcoin" style="width: 100%; border-radius: 12px;">
       </div>
       <div id="chart"></div>
@@ -231,23 +230,44 @@
     const apiURL = 'https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd&order=market_cap_desc&per_page=10&page=1&price_change_percentage=24h';
     const ohlcBaseURL = 'https://api.coingecko.com/api/v3/coins';
 
-    let prices = [];
-    let portfolio = {};
-    let balance = 10000.00;
+    // Ambil data pengguna dari localStorage
+    const savedUser   = JSON.parse(localStorage.getItem('user'));
 
-    const notifyEl = document.getElementById('notification');
+    // Cek apakah pengguna sudah login
+    if (!savedUser  ) {
+      alert('You must log in first!');
+      window.location.href = 'index.html'; // Arahkan kembali ke halaman login
+    } else {
+      // Tampilkan informasi pengguna di dashboard
+      const header = document.createElement('h2');
+      header.textContent = `Welcome, ${savedUser .username}!`;
+      document.body.insertBefore(header, document.querySelector('main'));
+    }
+
+    // Ambil portofolio dan saldo dari localStorage
+    const savedPortfolio = JSON.parse(localStorage.getItem('portfolio')) || {};
+    const savedBalance = JSON.parse(localStorage.getItem('balance')) || 10000.00; // Default balance
+
+    // Set portofolio dan saldo
+    let portfolio = savedPortfolio;
+    let balance = savedBalance;
+
+    // Update tampilan saldo
+    const balanceUsdEl = document.getElementById('balance-usd');
+    balanceUsdEl.textContent = `${balance.toFixed(2)} USD`;
+
     const pricesTableBody = document.getElementById('prices-table-body');
     const coinSelect = document.getElementById('coin-select');
-    const tradeForm = document.getElementById('trade-form');
     const portfolioBody = document.getElementById('portfolio-body');
-    const balanceUsdEl = document.getElementById('balance-usd');
     const chartTitle = document.getElementById('chart-title');
     const chartContainer = document.getElementById('chart');
 
+    let prices = [];
     let chart = null;
     let candleSeries = null;
 
     function showNotification(message) {
+      const notifyEl = document.getElementById('notification');
       notifyEl.textContent = message;
       notifyEl.style.display = 'block';
       setTimeout(() => {
@@ -328,6 +348,7 @@
       }
     }
 
+    const tradeForm = document.getElementById('trade-form');
     tradeForm.addEventListener('submit', (e) => {
       e.preventDefault();
       const coinId = coinSelect.value;
@@ -362,6 +383,12 @@
         balance += cost;
         showNotification(`Sold ${amount.toFixed(6)} ${coin.name} for $${cost.toFixed(2)}`);
       }
+
+      // Simpan saldo dan portofolio ke localStorage
+      localStorage.setItem('balance', JSON.stringify(balance));
+      localStorage.setItem('portfolio', JSON.stringify(portfolio));
+
+      // Update tampilan saldo dan tabel portofolio
       balanceUsdEl.textContent = `${balance.toFixed(2)} USD`;
       updatePortfolioTable();
       tradeForm.reset();
@@ -463,7 +490,6 @@
 
     fetchPrices();
     setInterval(fetchPrices, 60000);
-
   </script>
 </body>
 </html>
