--- a/dashboard.html
+++ b/dashboard.html
@@ -218,7 +218,7 @@
     <section id="chart-section" aria-label="Candlestick Chart">
       <h2 id="chart-title" style="text-align:center; user-select:none; color:#00ffe4; text-shadow:0 0 8px #00ffe4;">Candlestick Chart - Select a coin</h2>
       <div class="chart-container">
-        <img src="images.png" alt="Candlestick Chart Bitcoin" style="width: 100%; border-radius: 12px;">
+        <img src="https://i.imgur.com/anZLNLo.jpeg" alt="Candlestick Chart Bitcoin" style="width: 100%; border-radius: 12px;">
       </div>
       <div id="chart"></div>
     </section>
