--- a/dashboard.html
+++ b/dashboard.html
@@ -490,6 +490,9 @@
 
     fetchPrices();
     setInterval(fetchPrices, 60000);
+window.addEventListener('DOMContentLoaded', () => {
+  alert('Selamat datang di Crypto Trading Simulator!\n\nWebsite ini adalah simulasi trading kripto yang memungkinkan kamu untuk membeli dan menjual mata uang kripto menggunakan saldo virtual. Data harga diambil secara real-time dari CoinGecko.\n\nSimulasi ini cocok untuk latihan sebelum melakukan trading dengan uang asli.');
+});
   </script>
 </body>
 </html>
