--- a/dashboard.html
+++ b/dashboard.html
@@ -191,6 +191,7 @@
     Crypto Trading Simulator
   </header>
 <button id="logout-button">Logout</button>
+<button id="daily-login-button">Claim Daily Bonus</button>
 
   <main>
     <section id="prices-section" aria-label="Cryptocurrency Prices">
